subnet.tf
resource "aws_subnet" "public" {
    vpc_id = "${aws_vpc.dev.id}"
    cidr_block = "10.0.1.0/24"

    tags = {
      Name = "${var.Name}.public"
      Env = "${var.Env}"
      Created_by = "${var.Created_by}"
      Dept = "${var.Dept}"
  }
}
